fix FindBugs warning